--- a/drugo/mysql/my.ini
+++ b/drugo/mysql/my.ini
@@ -38,9 +38,9 @@ socket		= /tmp/mysql.sock
 port		= 3307
 
 
-innodb_data_home_dir = C:/Users/jovan/Desktop/Jasa USB WebServer\mysql\data\
+innodb_data_home_dir = C:/Users/U105.16/Desktop/Flasa USB WebServer\mysql\data\
 innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = C:/Users/jovan/Desktop/Jasa USB WebServer\mysql\data\
+innodb_log_group_home_dir = C:/Users/U105.16/Desktop/Flasa USB WebServer\mysql\data\
 
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
